--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ header .cta{
 header .cta:hover{
     opacity:.85;
     transform:translateY(-2px);
+    cursor:pointer;
 }
 
 @media only screen and (max-width: 600px) {
@@ -174,16 +175,41 @@ section.contacts{
     background-color: var(--color-secondary);
 }
 
-form.contact-form label{
+form#contact-form label{
     color:white;
     font-weight: bolder;
 }
 
-form.contact-form .input-group-text{
+form#contact-form .input-group-text{
     background:var(--color-highlight);
     color:white;
     border:none;
 }
 
+form .btn{
+    background:var(--color-highlight) !important;
+    margin-left: auto;
+}
 
 /* /contact form */
+
+
+/* footer */
+footer{
+    background-color: var(--color-main);
+    color:white;
+}
+footer p{
+    margin:0;
+}
+
+.modal-icon{
+    color:green;
+    font-size:3rem;
+    cursor:pointer;
+}
+
+.modal-content {
+    color:var(--color-main);
+    border:4px solid var(--color-highlight);
+}
