--- a/style.css
+++ b/style.css
@@ -30,6 +30,22 @@ header h1{
     font-size:3.5rem;
     font-family: 'Satisfy', cursive;
     letter-spacing: .5rem;
+    animation: welcome 2s ease;
+}
+header h2{
+    animation:welcome 2s ease;
+    animation-delay: .6s;
+    animation-fill-mode: both;
+}
+@keyframes welcome{
+    0%{
+        transform:translateX(-200px);
+        opacity:0
+    }
+    100%{
+        transform:translateX(0);
+        opacity:1
+    }
 }
 
 header > .header-bg-img{
@@ -58,6 +74,9 @@ header .cta{
     letter-spacing:.3rem;
     font-family: 'Satisfy', cursive !important;
     transition:all .2s ease;
+    animation:welcome 2s ease;
+    animation-delay: 1s;
+    animation-fill-mode: both;
 }
 header .cta:hover{
     opacity:.85;
@@ -173,10 +192,19 @@ section.testimonials{
 /* contact form */
 section.contacts{
     background-color: var(--color-secondary);
+    color:white;
+    font-size:1.2rem;
+}
+.contacts-icon{
+    font-size: 5rem;
+    margin: 0 auto;
+    display: block;
+    text-align: center;
+    /* color: white; */
 }
 
 form#contact-form label{
-    color:white;
+    /* color:white; */
     font-weight: bolder;
 }
 
@@ -202,6 +230,7 @@ footer{
 footer p{
     margin:0;
 }
+
 
 .modal-icon{
     color:green;
